// Vitest Snapshot v1

exports[`Button > :props > block 1`] = `
<button
  aria-disabled="false"
  class="t-button t-size-m t-button--base t-button--default t-button--square t-is-block"
  role="button"
>
  <!---->
  <span
    class="t-button__text"
  >
    我是按钮
  </span>
</button>
`;

exports[`Button > :props > content 1`] = `
<button
  aria-disabled="false"
  class="t-button t-size-m t-button--base t-button--default t-button--square"
  role="button"
>
  <!---->
  <span
    class="t-button__text"
  >
    <div>
      text
    </div>
  </span>
</button>
`;

exports[`Button > :props > content 2`] = `
<button
  aria-disabled="false"
  class="t-button t-size-m t-button--base t-button--default t-button--square"
  role="button"
>
  <!---->
  <span
    class="t-button__text"
  >
    text
  </span>
</button>
`;

exports[`Button > :props > disabled 1`] = `
<button
  aria-disabled="true"
  class="t-button t-size-m t-button--base t-button--default t-button--square t-is-disabled"
  disabled=""
  role="button"
>
  <!---->
  <span
    class="t-button__text"
  >
    <!---->
  </span>
</button>
`;

exports[`Button > :props > disabled 2`] = `
<button
  aria-disabled="true"
  class="t-button t-size-m t-button--base t-button--default t-button--square t-is-disabled"
  disabled=""
  role="button"
>
  <!---->
  <span
    class="t-button__text"
  >
    按钮1
  </span>
</button>
`;

exports[`Button > :props > ghost 1`] = `
<button
  aria-disabled="false"
  class="t-button t-size-m t-button--base t-button--default t-button--square t-button--ghost"
  role="button"
>
  <!---->
  <span
    class="t-button__text"
  >
    我是按钮
  </span>
</button>
`;

exports[`Button > :props > icon 1`] = `
<button
  aria-disabled="false"
  class="t-button t-size-m t-button--base t-button--default t-button--square"
  role="button"
>
  <div>
    text
  </div>
  <span
    class="t-button__text"
  >
    <!---->
  </span>
</button>
`;

exports[`Button > :props > icon 2`] = `
<button
  aria-disabled="false"
  class="t-button t-size-m t-button--base t-button--default t-button--square"
  role="button"
>
  text
  <span
    class="t-button__text"
  >
    <!---->
  </span>
</button>
`;

exports[`Button > :props > loading 1`] = `
<button
  aria-disabled="false"
  class="t-button t-size-m t-button--base t-button--default t-button--square t-is-loading"
  role="button"
>
  <svg
    class="t-icon t-icon-loading"
    fill="none"
    height="1em"
    viewBox="0 0 16 16"
    width="1em"
  >
    <path
      d="M8 1.5a6.5 6.5 0 000 13v-1.63A4.87 4.87 0 1112.88 8h1.62A6.5 6.5 0 008 1.5z"
      fill="currentColor"
      fill-opacity="0.9"
    />
  </svg>
  <span
    class="t-button__text"
  >
    我是按钮
  </span>
</button>
`;

exports[`Button > :props > shape 1`] = `
<button
  aria-disabled="false"
  class="t-button t-size-m t-button--base t-button--default t-button--square"
  role="button"
>
  <!---->
  <span
    class="t-button__text"
  >
    我是按钮
  </span>
</button>
`;

exports[`Button > :props > shape 2`] = `
<button
  aria-disabled="false"
  class="t-button t-size-m t-button--base t-button--default t-button--round"
  role="button"
>
  <!---->
  <span
    class="t-button__text"
  >
    我是按钮
  </span>
</button>
`;

exports[`Button > :props > size 1`] = `
<button
  aria-disabled="false"
  class="t-button t-size-s t-button--base t-button--default t-button--square"
  role="button"
>
  <!---->
  <span
    class="t-button__text"
  >
    我是按钮
  </span>
</button>
`;

exports[`Button > :props > size 2`] = `
<button
  aria-disabled="false"
  class="t-button t-size-m t-button--base t-button--default t-button--square"
  role="button"
>
  <!---->
  <span
    class="t-button__text"
  >
    我是按钮
  </span>
</button>
`;

exports[`Button > :props > size 3`] = `
<button
  aria-disabled="false"
  class="t-button t-size-l t-button--base t-button--default t-button--square"
  role="button"
>
  <!---->
  <span
    class="t-button__text"
  >
    我是按钮
  </span>
</button>
`;

exports[`Button > :props > theme 1`] = `
<button
  aria-disabled="false"
  class="t-button t-size-m t-button--base t-button--default t-button--square"
  role="button"
>
  <!---->
  <span
    class="t-button__text"
  >
    我是按钮
  </span>
</button>
`;

exports[`Button > :props > theme 2`] = `
<button
  aria-disabled="false"
  class="t-button t-size-m t-button--base t-button--primary t-button--square"
  role="button"
>
  <!---->
  <span
    class="t-button__text"
  >
    我是按钮
  </span>
</button>
`;

exports[`Button > :props > theme 3`] = `
<button
  aria-disabled="false"
  class="t-button t-size-m t-button--base t-button--danger t-button--square"
  role="button"
>
  <!---->
  <span
    class="t-button__text"
  >
    我是按钮
  </span>
</button>
`;

exports[`Button > :props > variant 1`] = `
<button
  aria-disabled="false"
  class="t-button t-size-m t-button--base t-button--default t-button--square"
  role="button"
>
  <!---->
  <span
    class="t-button__text"
  >
    我是按钮
  </span>
</button>
`;

exports[`Button > :props > variant 2`] = `
<button
  aria-disabled="false"
  class="t-button t-size-m t-button--outline t-button--default t-button--square"
  role="button"
>
  <!---->
  <span
    class="t-button__text"
  >
    我是按钮
  </span>
</button>
`;

exports[`Button > :props > variant 3`] = `
<button
  aria-disabled="false"
  class="t-button t-size-m t-button--text t-button--default t-button--square"
  role="button"
>
  <!---->
  <span
    class="t-button__text"
  >
    我是按钮
  </span>
</button>
`;
